// Teleport
// Copyright (C) 2025 Gravitational, Inc.
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

package teleport.relaytunnel.v1alpha;

import "google/rpc/status.proto";

option go_package = "github.com/gravitational/teleport/gen/proto/go/teleport/relaytunnel/v1alpha;relaytunnelv1alpha";

// sent by the client at the beginning of the control stream, the first stream
// opened by the client
message ClientHello {
  string tunnel_type = 1;
}

// sent by the server at the beginning of the control stream
message ServerHello {
  google.rpc.Status status = 1;
}

// sent by the server in the control stream
message ServerStream {
  // todo
}

// sent by the client in the control stream
message ClientStream {
  // todo
}
